--- a/SoundByte.UWP/Views/Application/SettingsView.xaml
+++ b/SoundByte.UWP/Views/Application/SettingsView.xaml
@@ -24,10 +24,10 @@
                         <AdaptiveTrigger MinWindowWidth="768" />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="StackPanel.Margin" Value="50,0" />
+                        <Setter Target="StackPanel.Padding" Value="50,0" />
                         <Setter Target="TextHeader.FontSize" Value="55" />
                         <Setter Target="TextHeader.Margin" Value="0,30,0,0"  />
-                        <Setter Target="TextHeader.Opacity" Value="1" />
+                        <Setter Target="TextHeader.Opacity" Value="0.8" />
                         <Setter Target="MobileGrid.Visibility" Value="Collapsed" />
                     </VisualState.Setters>
                 </VisualState>
@@ -38,11 +38,10 @@
             <TextBlock Text="Settings" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="SemiBold" FontSize="18" />
         </Grid>
         
-        <ScrollViewer HorizontalAlignment="Stretch"
-                      VerticalScrollBarVisibility="Hidden">
+        <ScrollViewer HorizontalAlignment="Stretch">
 
-            <StackPanel x:Name="StackPanel" Margin="10,0">
-                <TextBlock x:Name="TextHeader" Text="Settings" FontWeight="SemiBold" Opacity="0" FontSize="25" Margin="0,0,0,0" />
+            <StackPanel x:Name="StackPanel" Padding="10,0">
+                <TextBlock x:Name="TextHeader" Text="Settings" FontWeight="Bold" Opacity="0" FontSize="25" Margin="0,0,0,0" />
                 <TextBlock MaxWidth="390" Opacity="0.7" FontSize="14" Margin="0,25,0,30" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Manage SoundByte settings below. You can tailor the user interface to your liking, adjust notification settings and perform advanced tasks like cleaning the cache." />
 
                 <!-- SoundCloud -->
