--- a/SoundByte.UWP/Views/ExploreView.xaml
+++ b/SoundByte.UWP/Views/ExploreView.xaml
@@ -28,10 +28,10 @@
                         <AdaptiveTrigger MinWindowWidth="768" />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="StackPanel.Margin" Value="50,0" />
+                        <Setter Target="StackPanel.Padding" Value="50,0" />
                         <Setter Target="TextHeader.FontSize" Value="55" />
                         <Setter Target="TextHeader.Margin" Value="10,30,0,0"  />
-                        <Setter Target="TextHeader.Opacity" Value="1" />
+                        <Setter Target="TextHeader.Opacity" Value="0.8" />
                         <Setter Target="DesktopCommandBar.Visibility" Value="Visible" />
                         <Setter Target="MobileGrid.Visibility" Value="Collapsed" />
                         <Setter Target="MobileCommandBar.Visibility" Value="Collapsed" />
@@ -69,21 +69,20 @@
 
         <GridView ItemClick="{x:Bind PlayItem}"
                   ItemsSource="{x:Bind ChartsModel}"
-                  Margin="10,0"
+                  Padding="10,0"
                   VerticalAlignment="Stretch"
                   SelectionMode="None"
                   IsSwipeEnabled="False"
                   x:Name="StackPanel"
                   IsItemClickEnabled="True"
                   HorizontalAlignment="Stretch"
-                  ScrollViewer.VerticalScrollBarVisibility="Hidden"
                   ShowsScrollingPlaceholders="False"
                   IsMultiSelectCheckBoxEnabled="False"
                   animations:ReorderGridAnimation.Duration="150"
                   ItemTemplate="{StaticResource TrackItem}">
             <GridView.Header>
                 <StackPanel Canvas.ZIndex="20">
-                    <TextBlock Opacity="0" x:Name="TextHeader" Text="Explore" FontWeight="SemiBold" FontSize="25" Margin="0,18,0,0" />
+                    <TextBlock Opacity="0" x:Name="TextHeader" Text="Explore" FontWeight="Bold" FontSize="25" Margin="0,18,0,0" />
 
                     <!-- Holds the two drop down boxes for selecting data -->
                     <Grid x:Name="ComboHolder" HorizontalAlignment="Stretch" Margin="0,10,0,10" Height="45">
