--- a/SoundByte.UWP/Views/General/WhatsNewView.xaml
+++ b/SoundByte.UWP/Views/General/WhatsNewView.xaml
@@ -24,10 +24,10 @@
                         <AdaptiveTrigger MinWindowWidth="768" />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="StackPanel.Margin" Value="50,0" />
+                        <Setter Target="StackPanel.Padding" Value="50,0" />
                         <Setter Target="TextHeader.FontSize" Value="55" />
                         <Setter Target="TextHeader.Margin" Value="0,30,0,0"  />
-                        <Setter Target="TextHeader.Opacity" Value="1" />
+                        <Setter Target="TextHeader.Opacity" Value="0.8" />
                         <Setter Target="MobileGrid.Visibility" Value="Collapsed" />
                     </VisualState.Setters>
                 </VisualState>
@@ -38,13 +38,12 @@
             <TextBlock Text="What's New" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="SemiBold" FontSize="18" />
         </Grid>
 
-        <ScrollViewer HorizontalAlignment="Stretch"
-                      VerticalScrollBarVisibility="Hidden">
-            <StackPanel x:Name="StackPanel" Margin="10,0">
-                <TextBlock x:Name="TextHeader" Opacity="0"  Text="What's New" FontWeight="SemiBold" FontSize="25" Margin="0,0,0,0" />
+        <ScrollViewer HorizontalAlignment="Stretch">
+            <StackPanel x:Name="StackPanel" Padding="10,0">
+                <TextBlock x:Name="TextHeader" Opacity="0"  Text="What's New" FontWeight="Bold" FontSize="25" Margin="0,0,0,0" />
                 <controls:MarkdownTextBlock x:Name="ChangelogView"
                                             IsTextSelectionEnabled="False"
-                                             CodeBackground="{ThemeResource ShellNavigationBackground}"
+                                            CodeBackground="{ThemeResource ShellNavigationBackground}"
                                             HorizontalAlignment="Stretch" />
             </StackPanel>
         </ScrollViewer>
