--- a/SoundByte.UWP/Views/Me/NotificationsView.xaml
+++ b/SoundByte.UWP/Views/Me/NotificationsView.xaml
@@ -31,10 +31,10 @@
                         <AdaptiveTrigger MinWindowWidth="768" />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="StackPanel.Margin" Value="50,0" />
+                        <Setter Target="StackPanel.Padding" Value="50,0" />
                         <Setter Target="TextHeader.FontSize" Value="55" />
                         <Setter Target="TextHeader.Margin" Value="10,30,0,0"  />
-                        <Setter Target="TextHeader.Opacity" Value="1" />
+                        <Setter Target="TextHeader.Opacity" Value="0.8" />
                         <Setter Target="DesktopCommandBar.Visibility" Value="Visible" />
                         <Setter Target="MobileGrid.Visibility" Value="Collapsed" />
                         <Setter Target="MobileCommandBar.Visibility" Value="Collapsed" />
@@ -65,15 +65,14 @@
                   SelectionMode="None"
                   IsSwipeEnabled="False"
                   IsItemClickEnabled="True"
-                  Margin="10,0"
+                  Padding="10,0"
                   x:Name="StackPanel"
-                  ScrollViewer.VerticalScrollBarVisibility="Hidden"
                   ItemClick="{x:Bind ViewModel.NotificationNavigate}"
                   HorizontalAlignment="Stretch"
                   VerticalAlignment="Stretch">
             <ListView.Header>
                 <StackPanel Canvas.ZIndex="20">
-                    <TextBlock x:Name="TextHeader" Opacity="0" Text="Notifications" FontWeight="SemiBold" FontSize="25" Margin="0,18,0,0" />
+                    <TextBlock x:Name="TextHeader" Opacity="0" Text="Notifications" FontWeight="Bold" FontSize="25" Margin="0,18,0,0" />
 
                     <StackPanel x:Name="DesktopCommandBar" Visibility="Collapsed" Orientation="Horizontal" Margin="10,30,0,20">
                         <uiElements:CircleButton Glyph="&#xE72C;" Label="Refresh" Click="{x:Bind ViewModel.RefreshPage}" Margin="0,0,5,0" />
