--- a/SoundByte.UWP/Dialogs/PinTileDialog.xaml
+++ b/SoundByte.UWP/Dialogs/PinTileDialog.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    Background="{ThemeResource ShellBackground}">
+    Background="{StaticResource ContentDialogBackgroundBrush}">
 
     <ScrollViewer HorizontalAlignment="Stretch"
                   VerticalScrollBarVisibility="Hidden">
