--- a/SoundByte.UWP/UserControls/CircleButton.xaml
+++ b/SoundByte.UWP/UserControls/CircleButton.xaml
@@ -2,33 +2,26 @@
     x:Class="SoundByte.UWP.UserControls.CircleButton"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Height="38">
+    Width="42" 
+    Height="42">
 
-    <Button Style="{StaticResource PillButtonStyle}" 
-            x:Name="MainButton"
-            Height="38"
-            Padding="0"
-            BorderThickness="1"
-            Background="{ThemeResource ShellNavigationBackground}"
-            BorderBrush="Transparent"
-            HorizontalContentAlignment="Stretch"
-            VerticalContentAlignment="Stretch">
+    <Button x:Name="MainButton"
+            Opacity="0.8"
+            Style="{StaticResource CircleButtonStyle}" 
+            Background="{x:Null}" 
+            Width="42" 
+            Height="42">
+        <ToolTipService.ToolTip>
+            <TextBlock Text="{x:Bind Path=Label, Mode=OneWay}" />
+        </ToolTipService.ToolTip>
+
         <Button.Content>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                <TextBlock VerticalAlignment="Center" 
-                           Foreground="{ThemeResource SystemControlBackgroundAccentBrush}"  
-                           Text="{x:Bind Path=Glyph, Mode=OneWay}" 
-                           Margin="15,0,5,0"
-                           FontFamily="Segoe MDL2 Assets" 
-                           FontSize="18" />
-                
-                <TextBlock Margin="5,0,18,0" 
-                           VerticalAlignment="Center" 
-                           Text="{x:Bind Path=Label, Mode=OneWay}" 
-                           FontSize="14" 
-                           Opacity="0.8"
-                           FontWeight="Normal" />
-            </StackPanel>
-        </Button.Content> 
+            <TextBlock OpticalMarginAlignment="TrimSideBearings" 
+                       Text="{x:Bind Path=Glyph, Mode=OneWay}"  
+                       FontWeight="Light" 
+                       FontSize="20" 
+                       FontFamily="Segoe MDL2 Assets"
+                       TextAlignment="Center"  />
+        </Button.Content>
     </Button>
 </UserControl>
